# captcha

./: README.md  captcha_labels.csv  captcha_model.h5  lable_dataset.py  pyproject.toml  test_img.py  train_cnn.py
download_base_img/: base64_to_jpg.py  playwright_scrape_img.py  selenium_scrapre_imgsel.py
