[project]
name = "captcha"
version = "0.1.0"
description = ""
authors = [
    {name = "djinn-djarin",email = "devendrapathak024@gmail.com"}
]
packages = [{include = "captcha"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "numpy (==1.26.4)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
